# feature_extraction_saec

./: .gitignore  README.md  main.py  main_02_extract.py  pyproject.toml  requirements.txt  sample_code.py  utils.py
.github/workflows/: install_deps_and_run_tests.yml  install_deps_and_run_tests_ubu.yml  install_deps_and_run_tests_win.yml
dev/: main_dev.py
dev/dev_outp/: mimi.txt
dev/dev_scripts/: main_dev.py  pipinstall.sh
dev_scripts/: build.sh  main_dev.py  pipinstall.sh
session_params/extraction/: extract_02.yaml
src/: fe_saec.py  test_01.py
